src/snapshots/transmute__parser__tests__function_block_empty_statement.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let a() {;}\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "a",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Block(
                    [],
                ),
                span: 1:9; [8, 11],
                typed: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: LetFn(
                    Identifier {
                        id: IdentId(0),
                        span: 1:5; [4, 5],
                        bound: Unbound,
                    },
                    [],
                    Return {
                        ret: None,
                        typed: Untyped,
                    },
                    ExprId(0),
                ),
                span: 1:1; [0, 11],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: ImplicitRet,
    },
)
