src/snapshots/transmute__parser__tests__function_call.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "times_two",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 0,
                    },
                    span: 1:1; [0, 9],
                },
                symbol_id: None,
            },
        ],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            21,
                        ),
                        span: 1:11; [10, 12],
                    },
                ),
                span: 1:11; [10, 12],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: FunctionCall(
                    IdentRefId {
                        id: 0,
                    },
                    [
                        ExprId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:1; [0, 13],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 13],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `.`, `;`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:14; [13, 13],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1157,
                ),
            },
        ],
    },
)
