src/snapshots/transmute__parser__tests__function_statement_trailing_comma.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let times_two(a: number,) = a * 2;\")).parse()"
---
(
    Ast {
        identifiers: [
            "times_two",
            "a",
            "number",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 1,
                    },
                    span: 1:29; [28, 29],
                },
                symbol_id: None,
            },
        ],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Identifier(
                            IdentRefId {
                                id: 0,
                            },
                        ),
                        span: 1:29; [28, 29],
                    },
                ),
                span: 1:29; [28, 29],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            2,
                        ),
                        span: 1:33; [32, 33],
                    },
                ),
                span: 1:33; [32, 33],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: Binary(
                    ExprId {
                        id: 0,
                    },
                    BinaryOperator {
                        kind: Multiplication,
                        span: 1:31; [30, 31],
                    },
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:29; [28, 33],
            },
            Expression {
                id: ExprId {
                    id: 3,
                },
                kind: Block(
                    [
                        StmtId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:29; [28, 34],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:29; [28, 34],
            },
            Statement {
                id: StmtId {
                    id: 1,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 13],
                    },
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:15; [14, 15],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:18; [17, 23],
                            },
                            span: 1:15; [14, 23],
                        },
                    ],
                    None,
                    ExprId {
                        id: 3,
                    },
                ),
                span: 1:1; [0, 34],
            },
        ],
        root: [
            StmtId {
                id: 1,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
