src/snapshots/transmute__parser__tests__function_statement_with_return_type-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="a"][shape="plaintext"][fontcolor="blue"]
n1[label="2"][shape="plaintext"][fontcolor="black"]
n2[label="*"][shape="plaintext"][fontcolor="black"]
n3[label="{ {<fn>times_two(): number } | { { <p0>a } | { <t0>number } } }"][shape="record"][fontcolor="black"]
n2 -> n0[style="solid"][color="black"][arrowhead="none"]
n2 -> n1[style="solid"][color="black"][arrowhead="none"]
n3 -> n2[style="solid"][color="black"][arrowhead="none"]}
