src/snapshots/transmute__parser__tests__if_else-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="true"][shape="plaintext"][fontcolor="black"]
n1[label="42"][shape="plaintext"][fontcolor="black"]
n2[label="43"][shape="plaintext"][fontcolor="black"]
n3[label="if"][shape="plaintext"][fontcolor="black"]
n3 -> n0[style="solid"][color="black"][arrowhead="none"]
n3 -> n1[style="solid"][color="green"][arrowhead="none"]
n3 -> n2[style="solid"][color="red"][arrowhead="none"]}
