src/snapshots/transmute__parser__tests__if_else_if_else-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="true"][shape="plaintext"][fontcolor="black"]
n1[label="42"][shape="plaintext"][fontcolor="black"]
n2[label="false"][shape="plaintext"][fontcolor="black"]
n3[label="43"][shape="plaintext"][fontcolor="black"]
n4[label="44"][shape="plaintext"][fontcolor="black"]
n5[label="if"][shape="plaintext"][fontcolor="black"]
n6[label="if"][shape="plaintext"][fontcolor="black"]
n5 -> n2[style="solid"][color="black"][arrowhead="none"]
n5 -> n3[style="solid"][color="green"][arrowhead="none"]
n5 -> n4[style="solid"][color="red"][arrowhead="none"]
n6 -> n0[style="solid"][color="black"][arrowhead="none"]
n6 -> n1[style="solid"][color="green"][arrowhead="none"]
n6 -> n5[style="solid"][color="red"][arrowhead="none"]}
