src/snapshots/transmute__parser__tests__if_result_access_call-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="true"][shape="plaintext"][fontcolor="black"]
n1[label=""][shape="point"][fontcolor="black"]
n2[label=""][shape="point"][fontcolor="black"]
n3[label="if"][shape="plaintext"][fontcolor="black"]
n4[label="f()"][shape="plaintext"][fontcolor="blue"]
n5[label="."][shape="plaintext"][fontcolor="black"]
n3 -> n0[style="solid"][color="black"][arrowhead="none"]
n3 -> n1[style="solid"][color="green"][arrowhead="none"]
n3 -> n2[style="solid"][color="red"][arrowhead="none"]
n5 -> n3[style="solid"][color="black"][arrowhead="none"]
n5 -> n4[style="solid"][color="black"][arrowhead="none"]}
